--- a/src/app/vitrine/vitrine.component.html
+++ b/src/app/vitrine/vitrine.component.html
@@ -1,1 +1,16 @@
-<p>vitrine works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6" *ngFor="let produto of produtos; let i = index">
+            <div class="card mb-4">
+                <img [src]="produto.imagemUrl" alt="{{ produto.nome }}" class="card-img-top img-fluid">
+                <div class="card-body">
+                    <h2 class="card-title">{{ produto.nome }}</h2>
+                    <p class="card-text font-weight-bold font-size-large">Preço: R$ {{ produto.preco.toFixed(2) }}</p>
+                    <a (click)="verDetalhes(produto.id)" class="btn btn-primary">Ver Detalhes</a>
+                    <p></p>
+                </div>
+            </div>
+            <div *ngIf="i % 2 !== 0" class="clearfix"></div>
+        </div>
+    </div>
+</div>
