--- a/src/styles.css
+++ b/src/styles.css
@@ -1,43 +1,45 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f0f0f0;
+.logo {
+  margin-left: 20px;
+  width: 100px;
+  height: 100px;
 }
+
+.logo img {
+  width: 100%;
+  height: auto;
+  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.4));
+}
+
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #333;
-  color: #fff;
+  background-color: #000;
+  color: #ffd700;
   padding: 10px;
-}
-
-.logo {
-  margin-left: 20px;
-}
-
-.search-box {
-  display: flex;
-  align-items: center;
-  margin-right: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 .search-input {
   padding: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid #ffd700;
   border-radius: 4px;
   margin-right: 10px;
 }
 
 .search-button {
-  background-color: #007bff;
-  color: #fff;
+  background-color: #ffd700;
+  color: #000;
   border: none;
   border-radius: 4px;
   padding: 5px 10px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.search-button:hover {
+  background-color: #c0a40c;
 }
 
 .user-icon {
@@ -45,8 +47,53 @@ body {
   margin-right: 20px;
 }
 
+.logo {
+  margin-left: 20px;
+  width: 200px;
+  height: 100px; 
+}
 
-.user-icon::before {
-  content: "\f007"; 
-  font-family: FontAwesome; 
+body {
+  background-color: #333;
+}
+
+.menu-title {
+  color: goldenrod;
+}
+.cadastro-icon {
+  width: 24px;
+  height: 24px;
+}
+
+@media (max-width: 768px) {
+  .logo {
+    width: 50px;
+    height: 50px;
+  }
+
+  .header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .search-input {
+    margin-right: 0;
+    margin-bottom: 10px;
+    margin-left: 200px;
+  }
+
+  .user-icon {
+    font-size: 20px;
+    margin-left: 600px;
+  }
+
+  .logo {
+    width: 150px;
+    height: 75px;
+  }
+
+  .menu-title {
+    font-size: 18px;
+    margin-top: 10px;
+  }
 }
