--- a/src/app/detalhe-produto/detalhe-produto.component.css
+++ b/src/app/detalhe-produto/detalhe-produto.component.css
@@ -1,29 +1,55 @@
 .container {
-    margin-top: 20px;
-    padding: 20px;
-    background-color: #f7f7f7;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-  }
-  
-  .img-fluid {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .font-weight-bold {
-    font-weight: bold;
-    font-size: 24px;
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #000; 
+  border: 1px solid goldenrod;
+  border-radius: 5px;
+  color: goldenrod; 
+}
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+.font-weight-bold {
+  font-weight: bold;
+  font-size: 24px;
+  margin-top: 10px;
+}
+
+p {
+  font-size: 16px;
+  margin-top: 10px;
+}
+
+.font-size-large {
+  font-size: 18px;
+  margin-top: 10px;
+}
+
+.background-black {
+  background-color: #000;
+}
+@media (max-width: 768px) {
+  .container {
     margin-top: 10px;
-  }
-  
-  p {
+    padding: 10px;
     font-size: 16px;
-    margin-top: 10px;
   }
-  
+
+  .font-weight-bold {
+    font-size: 20px;
+    margin-top: 5px;
+  }
+
+  p {
+    font-size: 14px;
+    margin-top: 5px;
+  }
+
   .font-size-large {
-    font-size: 18px;
-    margin-top: 10px;
+    font-size: 16px;
+    margin-top: 5px;
   }
-  
+}
