--- a/src/app/reenvio-senha/reenvio-senha.component.html
+++ b/src/app/reenvio-senha/reenvio-senha.component.html
@@ -1,1 +1,15 @@
-<p>reenvio-senha works!</p>
+<div class="container">
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <div class="reset-password-box">
+          <h2>Informe seu email</h2>
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" class="form-control" placeholder="Seu email">
+          </div>
+          <button class="btn btn-primary btn-block">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
