adicionado formularios responsivos

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,51 +10,68 @@
         <div class="login-form">
             <h2>Já tenho cadastro</h2>
             <div class="form-group2">
-                <label for="username">Login:</label>
-                <input type="text" id="username" name="username" class="form-control">
+                <label for="email1">Login com email:</label>
+                <input type="text" id="email1" name="email1" class="form-control">
             </div>
             <div class="form-group2">
-                <label for="password">Senha:</label>
-                <input type="password" id="password" name="password" class="form-control">
+                <label for="senha1">Senha:</label>
+                <input type="password" id="senha1" name="senha1" class="form-control">
             </div>
             <a routerLink="/esquecisenha" class="forgot-password-link">Esqueci minha senha</a>
-            <button class="btn login-button">Entrar</button>
+            <button class="btn login-button" (click)="fazerLogin()">
+                Entrar
+            </button>
+            <div *ngIf="loginSucesso" class="alert alert-success">
+                Logado com sucesso!
+            </div>
+            
         </div>
         <div class="signup-button">
-            <p>Não tenho cadastro</p>
-            <button class="btn btn-primary" (click)="cadastroVisivel = !cadastroVisivel">Cadastrar</button>
+            <p *ngIf="!cadastroVisivel">Não tenho cadastro</p>
+            <button class="btn btn-primary" (click)="cadastroVisivel = !cadastroVisivel" *ngIf="!cadastroVisivel">Cadastrar</button>
             <div *ngIf="cadastroVisivel">
                 <h2>Cadastro</h2>
                 <div class="form-group">
                     <label for="nome">Nome:</label>
-                    <input type="text" id="nome" name="nome" class="form-control">
+                    <input type="text" id="nome" name="nome" class="form-control" [(ngModel)]="nome" (keyup)="verificarNomePreenchido()">
                 </div>
                 <div class="form-group">
                     <label for="email">E-mail:</label>
-                    <input type="email" id="email" name="email" class="form-control">
+                    <input type="email" id="email" name="email" class="form-control" [(ngModel)]="email" (keyup)="verificarEmailPreenchido()">
                 </div>
                 <div class="form-group">
                     <label for="senha">Senha:</label>
-                    <input type="password" id="senha" name="senha" class="form-control" [(ngModel)]="senha">
+                    <input type="password" id="senha" name="senha" class="form-control" [(ngModel)]="senha" (keyup)="verificarSenhaPreenchida()">
                 </div>
                 <div class="form-group">
                     <label for="confirmarsenha">Confirmar Senha:</label>
                     <input type="password" id="confirmarsenha" name="confirmarsenha" class="form-control"
-                           [(ngModel)]="confirmarSenha" [ngClass]="{'is-invalid': senha !== confirmarSenha}">
+                        [(ngModel)]="confirmarSenha" (keyup)="verificarConfirmarSenhaPreenchida()">
                     <div *ngIf="senha !== confirmarSenha" class="invalid-feedback">
                         As senhas não coincidem.
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="cpf">CPF:</label>
-                    <input type="text" id="cpf" name="cpf" class="form-control" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}">
+                    <input type="text" id="cpf" name="cpf" class="form-control" [(ngModel)]="cpf" (keyup)="verificarCpfPreenchido()">
                 </div>
                 <div class="form-group">
                     <label for="telefone">Telefone:</label>
-                    <input type="tel" id="telefone" name="telefone" class="form-control" pattern="\(\d{2}\) \d{5}-\d{4}">
+                    <input type="tel" id="telefone" name="telefone" class="form-control" [(ngModel)]="telefone" (keyup)="verificarTelefonePreenchido()">
                 </div>
-                <button class="btn btn-success">Criar Conta</button>
-            </div>
+                <div *ngIf="senhaNaoCoincide" class="alert alert-danger" role="alert">
+                    As senhas não coincidem.
+                </div>
+                
+                <button class="btn btn-success" (click)="criarConta()" [disabled]="!(nome && email && senha && confirmarSenha && cpf && telefone)">
+                    Criar Conta
+                </button>
+                
+                <div *ngIf="cadastroSucesso" class="alert alert-success" role="alert">
+                    Conta criada com sucesso!
+                </div>
+                
+            </div> 
         </div>
     </div>
 </body>
