--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #000;
+    background-color: white;
     margin: 0;
     padding: 0;
     display: flex;
@@ -12,11 +12,26 @@ body {
 
 .login-container {
     display: flex;
-    background-color: #000;
+    background-color: black;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     overflow: hidden;
+    color: white;
 }
+
+.login-success-message, .cadastro-success-message {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+    margin-top: 10px;
+    display: none;
+  }
+  
+.login-success-message.show, .cadastro-success-message.show {
+    display: block;
+  }
 
 .login-form {
     flex: 1;
@@ -63,7 +78,6 @@ body {
 .login-button:hover, .signup-button .btn:hover {
     background-color: #c0a40c;
 }
-
 .signup-button {
     flex: 1;
     background-color: goldenrod;
