--- a/src/app/reenvio-senha/reenvio-senha.component.html
+++ b/src/app/reenvio-senha/reenvio-senha.component.html
@@ -1,15 +1,17 @@
 <div class="container">
-    <div class="row">
-      <div class="col-md-6 offset-md-3">
-        <div class="reset-password-box">
-          <h2>Informe seu email</h2>
-          <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" class="form-control" placeholder="Seu email">
-          </div>
-          <button class="btn btn-primary btn-block">OK</button>
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <div class="reset-password-box">
+        <h2>Informe seu email</h2>
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" class="form-control" placeholder="Seu email" [(ngModel)]="email">
+        </div>
+        <button class="btn btn-primary btn-block" (click)="enviarEmail()">OK</button>
+        <div class="mensagem" [ngClass]="{'alert alert-success': mensagem === 'Foi enviado um email com instruções de recuperação.', 'alert alert-danger': mensagem === 'Email inválido.'}">
+          {{ mensagem }}
         </div>
       </div>
     </div>
   </div>
-  
+</div>
